Version 3.0.0 (28 Apr 2006)

  * general changes:
    - added write support (that is for creating and modifying RIFF, DLS and
      gig files)
    - loading DLS and gig files is now much more permissive, DLS and gig
      files are now loaded even if mandatory RIFF chunks are missing
    - fixed some memory management errors, one of them was causing a
      crash when a multi-file gig was deallocated

  * src/gig.cpp, src/gig.h:
    - fixed the GetVelocityCutoff function, it wasn't always using the
      VCFVelocityScale parameter when no cutoff controller was defined
    - support for the gig v3 feature to have a number of dimension
      splits not equal to a power of two
    - added write support (highly experimental)

  * src/DLS.cpp, src/DLS.h:
    - fixed loading of Articulation Connections (<artl> list chunks were
      seeked instead of ordinary <artl> data chunks)
    - added write support (highly experimental)

  * src/RIFF.cpp, src/RIFF.h:
    - added write support
    - Chunk::LoadChunkData() can now be called again to resize the buffer
      after a Chunk::Resize() and before the File::Save() call to allow
      placing the new data in the chunk's write buffer and perform the
      resize and write operations in one rush

  * src/gigdump.cpp:
    - fixed to show the correct amount of dimension regions instead of 32
      (patch by James Wylder)

  * src/dlsdump.cpp:
    - show for every region the name of the referenced sample
    - show file name in quotation marks

Version 2.0.2 (15 Aug 2005)

  * packaging changes:
    - require automake (>= 1.5) for 'make -f Makefile.cvs'
      (mandatory for 'dist-bzip2' automake option)

  * src/gig.cpp, src/gig.h:
    - support for gig v3 multi-file format (.gig, .gx01, .gx02, ...),
      the extension files are read automatically when the samples are
      loaded
    - fixed the 24 bit decompression, the result should now be exact
      instead of an approximation